@@ -225,3 +225,5 @@
 2016-02-24 Fred Gleason <fredg@paravelsystems.com>
 	* Added 'WHHttpServer::loadUsers()' and 'WHHttpServer::saveUsers()'
 	methods in 'src/wh/whhttpserver.cpp' and 'src/wh/whhttpserver.h'.
+2016-02-24 Fred Gleason <fredg@paravelsystems.com>
+	* Fixed multiple races in WHHttpServer.
